# bevy_falling_sand

./: .gitignore  .rust-analyzer.json  Cargo.toml  LICENSE  README.md  my_particles.ron  perf.data  rust-toolchain.toml
.cargo/: config.toml  config_fast_builds.toml
.github/workflows/: ci.yaml
assets/particles/: demo_particles.ron  particles.ron  particles.scn.ron  particles_test.ron
assets/scenes/: hourglass.ron  platforms.ron  smaller_box.ron  test.ron
assets/shaders/: burning_effect.wgsl  chunk_effects.wgsl  cursor_guide.wgsl  game_of_life.wgsl  gas_effect.wgsl  glow_effect.wgsl  liquid_effect.wgsl
crates/bfs_asset_loaders/: Cargo.toml
crates/bfs_asset_loaders/src/: lib.rs
crates/bfs_assets/: Cargo.toml
crates/bfs_assets/src/: lib.rs  particle_asset.rs  particle_data.rs  particle_scene_definitions.rs  scene_asset.rs
crates/bfs_color/: Cargo.toml
crates/bfs_color/src/: events.rs  lib.rs  particle_definitions.rs  rng.rs  systems.rs
crates/bfs_core/: Cargo.toml
crates/bfs_core/src/: blueprint.rs  bundles.rs  chunk_map.rs  common.rs  events.rs  hibernation.rs  lib.rs  map.rs  particle.rs  registration.rs  rng.rs  simulation.rs  spatial.rs
crates/bfs_core/src/chunk_map/: chunk_map.rs  mod.rs
crates/bfs_core/src/particle/: events.rs  mod.rs  particle_definitions.rs  systems.rs
crates/bfs_core/src/particle_type/: mod.rs  particle_type.rs  systems.rs
crates/bfs_debug/: Cargo.toml
crates/bfs_debug/src/: lib.rs
crates/bfs_internal/: Cargo.toml
crates/bfs_internal/src/: bundles.rs  file_utils.rs  handle_new_particles.rs  lib.rs  observers.rs  particle_management.rs  particle_registry.rs  prelude.rs
crates/bfs_movement/: Cargo.toml
crates/bfs_movement/src/: behavior.rs  events.rs  lib.rs  material.rs  movement.rs  movement_priority.rs  particle_definitions.rs  physics_components.rs  rng.rs  systems.rs
crates/bfs_physics/: Cargo.toml
crates/bfs_physics/src/: lib.rs
crates/bfs_rapier/: Cargo.toml
crates/bfs_reactions/: Cargo.toml
crates/bfs_reactions/src/: burning.rs  events.rs  lib.rs  particle_definitions.rs  rng.rs  systems.rs
crates/bfs_scenes/: Cargo.toml
crates/bfs_scenes/src/: events.rs  lib.rs
crates/bfs_spatial/: Cargo.toml
crates/bfs_spatial/src/: lib.rs
examples/: README_ASSETS.md  README_PARTICLE_SAVE_LOAD.md  basic.rs  custom_movement.rs  fire.rs  interesting_movement.rs  minimal.rs  movement.rs  mutation.rs  noise.rs  particle_assets.rs  particle_save_load.rs  playground.rs  rigid_bodies.rs  sandbox.rs  spatial.rs
examples/assets/particles/: particles.ron
examples/assets/scenes/: benchmark.ron  bevy_falling_sand.ron  box.ron  fire_testing.ron  platforms.ron  shit_house.ron  smaller_box.ron  test.ron  tree.ron
examples/editor/: app_state.rs  brush.rs  camera.rs  cursor.rs  keybindings.rs  main.rs  particles.rs  physics.rs  scenes.rs
examples/editor/brush/: helpers.rs  mod.rs
examples/editor/console/: core.rs  mod.rs  ui.rs
examples/editor/console/commands/: clear.rs  echo.rs  exit.rs  help.rs  mod.rs
examples/editor/ui/: console.rs  file_browser.rs  layers_panel.rs  mod.rs  overlays.rs  particle_editor.rs  particle_search.rs  quick_actions.rs  statistics_panel.rs  top_bar.rs
examples/editor/ui/console/: console_ui.rs  mod.rs
examples/editor/ui/console/core/: core.rs  mod.rs
examples/editor/ui/console/core/commands/: avian.rs  brush.rs  camera.rs  clear.rs  debug.rs  despawn.rs  echo.rs  exit.rs  help.rs  hierarchical.rs  mod.rs  new_command.sh  particles.rs  physics.rs  reset.rs
examples/editor/ui/particle_editor/: editor_types.rs  mod.rs  particle_editor_registry.rs
examples/editor/ui/top_bar/: mod.rs  particle_files.rs
examples/sandbox/: brush.rs  camera.rs  debug.rs  main.rs  particle_files.rs  particle_management.rs  particle_setup.rs  scenes.rs  setup.rs  ui.rs
examples/sandbox/ui/: main_ui.rs  mod.rs
examples/utils/: boundary.rs  brush.rs  camera.rs  conditions.rs  cursor.rs  effects.rs  gui.rs  instructions.rs  mod.rs  particles.rs  states.rs  status_ui.rs
src/: lib.rs  prelude.rs
src/asset_loaders/: mod.rs  particle.rs
src/components/: bundle.rs  burning.rs  chunks.rs  color.rs  hibernation.rs  map.rs  material.rs  mod.rs  movement.rs  movement_priority.rs  particle.rs  particle_types.rs  properties.rs  reaction.rs  rng.rs  scenes.rs
src/core/: mod.rs  schedule.rs  simulation.rs  spatial.rs
src/core/chunk/: coord.rs  dirty.rs  index.rs  loading.rs  mod.rs  region.rs  schedule.rs
src/core/particle/: lifecycle.rs  mod.rs  particle_map.rs  registry.rs  schedule.rs  sync.rs
src/debug/: mod.rs  schedule.rs
src/events/: map.rs  mod.rs  particle_deserializer.rs  scenes.rs
src/gizmos/: debug.rs  mod.rs
src/movement/: mod.rs  schedule.rs
src/movement/particle/: components.rs  despawn.rs  mod.rs
src/movement/processing/: mod.rs  state.rs  systems.rs
src/persistence/: bfc.rs  bfs.rs  io_reader.rs  mod.rs  particle_types.rs
src/persistence/chunks/: load.rs  mod.rs  resources.rs  save.rs
src/physics/: components.rs  dynamic.rs  geometry.rs  mod.rs  particle_colliders.rs  resources.rs  rigid_bodies.rs  static.rs  static_mesh.rs  systems.rs
src/reactions/: contact.rs  corrosion.rs  fire.rs  mod.rs
src/render/: mod.rs  schedule.rs
src/render/particle/: components.rs  mod.rs
src/render/pipeline/: gpu.rs  mod.rs  textures.rs
src/render/pipeline/shaders/: chunk_update.wgsl  default_chunk_effect.wgsl  effect_update.wgsl  effects.wgsl  intermediate_sample.wgsl  world_color.wgsl
src/resources/: chunks.rs  debug.rs  kdtree.rs  map.rs  mod.rs  simulation.rs
src/scenes/: mod.rs
src/systems/: burning.rs  color.rs  debug.rs  hibernation.rs  map.rs  material.rs  mod.rs  movement.rs  particle.rs  particle_deserializer.rs  reaction.rs  scenes.rs
src/type_registry/: mod.rs
src/utils/: geometry.rs  mod.rs
