[package]
name = "bevy_falling_sand"
version = "0.5.0"
edition = "2021"
authors = ["Jeff Barfield <jeffreybarfield@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/noprobelm/bevy_falling_sand"
readme = "README.md"
description = "Falling Sand simulation plugin for Bevy"
keywords = ["bevy", "falling-sand", "simulation", "particles"]
exclude = [
  "assets",
  "examples",
  "docs",
  ".github",
  ".gitignore",
  "assets",
  "CHANGELOG.org",
]
documentation = "http://docs.rs/bevy_falling_sand"
categories = ["game-engines", "game-development"]

[features]
movement = ["bfs_internal/movement"]
color = ["bfs_internal/color"]
scenes = ["bfs_internal/scenes"]
physics = ["bfs_internal/physics"]
reactions = ["bfs_internal/reactions", "color"]
debug = ["bfs_internal/debug", "movement"]
assets = ["bfs_internal/assets", "movement", "color", "reactions"]
bundles = ["bfs_internal/bundles", "movement", "color", "reactions"]

default = [
  "movement",
  "color",
  "debug",
  "reactions",
  "scenes",
  "physics",
  "assets",
  "bundles",
]

[workspace]
members = [
  "crates/bfs_internal",
  "crates/bfs_core",
  "crates/bfs_movement",
  "crates/bfs_debug",
  "crates/bfs_color",
  "crates/bfs_reactions",
  "crates/bfs_physics",
  "crates/bfs_reactions",
  "crates/bfs_scenes",
  "crates/bfs_assets",
]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false, features = [
  "std",
  "bevy_state",
  "bevy_sprite",
] }

[dependencies]
bfs_internal = { path = "crates/bfs_internal", default-features = false }
bevy.workspace = true

[dev-dependencies]
bevy_egui = "0.34.1"
bevy_turborand = "0.11.0"
ron = "0.8"
clap = { version = "4.5", features = ["derive"] }
shlex = "1.3"
trie-rs = "0.2"
bevy = { version = "0.16" }
earcutr = "0.4"

[profile.dev-release]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
incremental = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
