[package]
name = "bevy_falling_sand"
version = "0.7.0"
edition = "2024"
authors = ["Jeff Barfield <jeffreybarfield@protonmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/noprobelm/bevy_falling_sand"
readme = "README.md"
description = "Falling Sand simulation plugin for Bevy"
keywords = ["bevy", "falling-sand", "simulation", "particles"]
exclude = [
  "/assets",
  "/examples",
  "/docs",
  "/.github",
  "/.gitignore",
  "/CHANGELOG.org",
]
documentation = "http://docs.rs/bevy_falling_sand"
categories = ["game-engines", "game-development"]

[lib]
doctest = false

[features]
default = [
  "render",
  "movement",
  "reactions",
  "physics",
  "debug",
  "persistence",
  "scenes",
]
render = ["dep:bevy_shader", "dep:bevy_sprite_render"]
movement = ["dep:smallvec"]
reactions = ["render", "movement"]
physics = ["dep:avian2d", "dep:earcutr", "dep:futures-lite"]
debug = []
bfs = []
bfc = ["render"]
persistence = ["bfs", "bfc", "dep:futures-lite", "dep:image", "dep:ron"]
scenes = ["dep:image", "dep:ron"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
  "std",
  "bevy_state",
  "bevy_sprite",
  "bevy_mesh",
  "bevy_sprite_render",
  "bevy_log",
  "bevy_gizmos",
  "bevy_scene",
  "serialize",
  "wayland",
] }
bevy_turborand = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"], optional = true }
ron = { version = "0.8", optional = true }
avian2d = { version = "0.5.0", optional = true }
earcutr = { version = "0.5.0", optional = true }
futures-lite = { version = "2.5", optional = true }
image = { version = "0.25", default-features = false, features = [
  "png",
], optional = true }
bevy_shader = { version = "0.18.1", optional = true }
bevy_sprite_render = { version = "0.18.1", optional = true }

[dev-dependencies]
bevy_egui = "0.39.1"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
clap = { version = "4.5", features = ["derive"] }
shlex = "1.3"
trie-rs = "0.2"
bevy = { version = "0.18.1" }
noise = "0.9.0"
avian2d = "0.5.0"
bevy_framepace = "0.21.0"

[profile.dev-release]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
incremental = false

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
