[package]
name = "bfs_asset_loaders"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
serde = "1.0.210"
thiserror = "1.0.64"
bfs_core = { path = "../bfs_core" }
bfs_reactions = { path = "../bfs_reactions" }
bfs_movement = { path = "../bfs_movement" }
bfs_color = { path = "../bfs_color" }

ron = "0.8.1"

