[package]
name = "bfs_internal"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bfs_core = { path = "../bfs_core" }
bfs_movement = { path = "../bfs_movement" }
bfs_color = { path = "../bfs_color" }
bfs_debug = { path = "../bfs_debug" }
bfs_reactions = { path = "../bfs_reactions" }
bfs_scenes = { path = "../bfs_scenes" }
bfs_physics = { path = "../bfs_physics" }
bfs_assets = { path = "../bfs_assets" }
bevy_turborand = "0.11.0"
serde = "1.0.210"
ron = "0.8"
