[package]
name = "bfs_internal"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bfs_core = { path = "../bfs_core" }
bfs_movement = { path = "../bfs_movement", optional = true }
bfs_color = { path = "../bfs_color", optional = true }
bfs_debug = { path = "../bfs_debug", optional = true }
bfs_reactions = { path = "../bfs_reactions", optional = true }
bfs_scenes = { path = "../bfs_scenes", optional = true }
bfs_physics = { path = "../bfs_physics", optional = true }
bfs_assets = { path = "../bfs_assets", optional = true }
bevy_turborand = "0.11.0"
serde = "1.0.210"
ron = "0.8"

[features]
movement = ["bfs_movement"]
color = ["bfs_color"] 
scenes = ["bfs_scenes"]
physics = ["bfs_physics"]
reactions = ["bfs_reactions", "color"]
debug = ["bfs_debug", "movement"]
assets = ["bfs_assets", "movement", "color", "reactions"]
bundles = ["movement", "color", "reactions"]

default = [
  "movement",
  "color", 
  "debug",
  "reactions",
  "scenes",
  "physics",
  "assets",
  "bundles",
]
