[package]
name = "bfs_physics"
version = "0.5.0"
edition = "2024"

[dependencies]
bevy.workspace = true
avian2d = { version = "0.3.1", features = ["debug-plugin"] }
bfs_core = { version = "0.5.0", path = "../bfs_core" }
bfs_movement = { version = "0.5.0", path = "../bfs_movement" }
earcutr = "0.5.0"
