[package]
name = "bfs_reactions"
version = "0.5.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_turborand = "0.11.0"
bfs_color = { version = "0.5.0", path = "../bfs_color" }
bfs_core = { version = "0.5.0", path = "../bfs_core" }
bfs_movement = { version = "0.5.0", path = "../bfs_movement" }
